src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg_copy_out(value out, value self, value src, int non_blocking);
value atg_copy_sparse_to_sparse(value self, value src, int non_blocking);
value atg_copy_sparse_to_sparse_(value self, value src, int non_blocking);
value atg_copy_sparse_to_sparse_out(value out, value self, value src, int non_blocking);
value atg_copysign(value self, value other);
value atg_copysign_(value self, value other);
value atg_copysign_out(value out, value self, value other);
value atg_copysign_scalar(value self, value other);
value atg_copysign_scalar_(value self, value other);
value atg_copysign_scalar_out(value out, value self, value other);
value atg_corrcoef(value self);
value atg_cos(value self);
value atg_cos_(value self);
value atg_cos_out(value out, value self);
value atg_cosh(value self);
value atg_cosh_(value self);
value atg_cosh_out(value out, value self);
value atg_cosine_embedding_loss(value input1, value input2, value target, double margin, int64_t reduction);
value atg_cosine_similarity(value x1, value x2, int64_t dim, double eps);
value atg_count_nonzero(value out, value self, value dim);
value atg_count_nonzero_out(value out, value self, value dim);
value atg_cov(value self, int64_t correction, value fweights, value aweights);
value atg_cross(value self, value other, value dim);
value atg_cross_entropy_loss(value self, value target, value weight, int64_t reduction, int64_t ignore_index, double label_smoothing);
value atg_cross_out(value out, value self, value other, value dim);
value atg_crow_indices(value self);
value atg_crow_indices_copy(value self);
value atg_crow_indices_copy_out(value out, value self);
value atg_ctc_loss(value log_probs, value targets, value input_lengths, value target_lengths, int64_t blank, int64_t reduction, int zero_infinity);
value atg_ctc_loss_tensor(value log_probs, value targets, value input_lengths, value target_lengths, int64_t blank, int64_t reduction, int zero_infinity);
value atg_cudnn_affine_grid_generator(value theta, int64_t n, int64_t C, int64_t H, int64_t W);
value atg_cudnn_affine_grid_generator_backward(value grad, int64_t n, int64_t C, int64_t H, int64_t W);
value atg_cudnn_affine_grid_generator_backward_out(value out, value grad, int64_t n, int64_t C, int64_t H, int64_t W);
value atg_cudnn_affine_grid_generator_out(value out, value theta, int64_t n, int64_t C, int64_t H, int64_t W);
value atg_cudnn_batch_norm(value input, value weight, value bias, value running_mean, value running_var, int training, double exponential_average_factor, double epsilon);
value atg_cudnn_batch_norm_backward(value input, value grad_output, value weight, value running_mean, value running_var, value save_mean, value save_var, double epsilon, value reserveSpace);
value atg_cudnn_batch_norm_backward_out(value out0, value out1, value out2, value input, value grad_output, value weight, value running_mean, value running_var, value save_mean, value save_var, double epsilon, value reserveSpace);
value atg_cudnn_batch_norm_out(value out0, value out1, value out2, value out3, value input, value weight, value bias, value running_mean, value running_var, int training, double exponential_average_factor, double epsilon);
value atg_cudnn_convolution(value self, value weight, value padding, value stride, value dilation, int64_t groups, int benchmark, int deterministic, int allow_tf32);
value atg_cudnn_convolution_add_relu(value self, value weight, value z, value alpha, value bias, value stride, value padding, value dilation, int64_t groups);
value atg_cudnn_convolution_add_relu_out(value out, value self, value weight, value z, value alpha, value bias, value stride, value padding, value dilation, int64_t groups);
value atg_cudnn_convolution_out(value out, value self, value weight, value padding, value stride, value dilation, int64_t groups, int benchmark, int deterministic, int allow_tf32);
value atg_cudnn_convolution_relu(value self, value weight, value bias, value stride, value padding, value dilation, int64_t groups);
value atg_cudnn_convolution_relu_out(value out, value self, value weight, value bias, value stride, value padding, value dilation, int64_t groups);
value atg_cudnn_convolution_transpose(value self, value weight, value padding, value output_padding, value stride, value dilation, int64_t groups, int benchmark, int deterministic, int allow_tf32);
value atg_cudnn_convolution_transpose_out(value out, value self, value weight, value padding, value output_padding, value stride, value dilation, int64_t groups, int benchmark, int deterministic, int allow_tf32);
value atg_cudnn_grid_sampler(value self, value grid);
value atg_cudnn_grid_sampler_backward(value self, value grid, value grad_output);
value atg_cudnn_grid_sampler_backward_out(value out0, value out1, value self, value grid, value grad_output);
value atg_cudnn_grid_sampler_out(value out, value self, value grid);
value atg_cudnn_is_acceptable(value self);
value atg_cummax(value self, int64_t dim);
value atg_cummax_out(value values, value indices, value self, int64_t dim);
value atg_cummaxmin_backward(value grad, value input, value indices, int64_t dim);
value atg_cummin(value self, int64_t dim);
value atg_cummin_out(value values, value indices, value self, int64_t dim);
value atg_cumprod(value self, int64_t dim, int dtype);
value atg_cumprod_(value self, int64_t dim, int dtype);
value atg_cumprod_backward(value grad, value input, int64_t dim, value output);
value atg_cumprod_out(value out, value self, int64_t dim, int dtype);
value atg_cumsum(value self, int64_t dim, int dtype);
value atg_cumsum_(value self, int64_t dim, int dtype);
value atg_cumsum_out(value out, value self, int64_t dim, int dtype);