src/bindings/torch_bindings_generated2.ml


  let stubs_copy_out =
    foreign
      "atg_copy_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_copy_sparse_to_sparse =
    foreign
      "atg_copy_sparse_to_sparse"
      (gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_copy_sparse_to_sparse_ =
    foreign
      "atg_copy_sparse_to_sparse_"
      (gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_copy_sparse_to_sparse_out =
    foreign
      "atg_copy_sparse_to_sparse_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_copysign =
    foreign "atg_copysign" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_copysign_ =
    foreign "atg_copysign_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_copysign_out =
    foreign
      "atg_copysign_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_copysign_scalar =
    foreign "atg_copysign_scalar" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_copysign_scalar_ =
    foreign "atg_copysign_scalar_" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_copysign_scalar_out =
    foreign
      "atg_copysign_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_corrcoef = foreign "atg_corrcoef" (gc_tensor @-> returning raw_tensor)
  let stubs_cos = foreign "atg_cos" (gc_tensor @-> returning raw_tensor)
  let stubs_cos_ = foreign "atg_cos_" (gc_tensor @-> returning raw_tensor)

  let stubs_cos_out =
    foreign "atg_cos_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_cosh = foreign "atg_cosh" (gc_tensor @-> returning raw_tensor)
  let stubs_cosh_ = foreign "atg_cosh_" (gc_tensor @-> returning raw_tensor)

  let stubs_cosh_out =
    foreign "atg_cosh_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_cosine_embedding_loss =
    foreign
      "atg_cosine_embedding_loss"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_cosine_similarity =
    foreign
      "atg_cosine_similarity"
      (gc_tensor @-> gc_tensor @-> int64_t @-> double @-> returning raw_tensor)
  ;;

  let stubs_count_nonzero =
    foreign
      "atg_count_nonzero"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_count_nonzero_out =
    foreign
      "atg_count_nonzero_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_cov =
    foreign
      "atg_cov"
      (gc_tensor @-> int64_t @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_cross =
    foreign
      "atg_cross"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_cross_entropy_loss =
    foreign
      "atg_cross_entropy_loss"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> double
       @-> returning raw_tensor)
  ;;

  let stubs_cross_out =
    foreign
      "atg_cross_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_crow_indices = foreign "atg_crow_indices" (gc_tensor @-> returning raw_tensor)

  let stubs_crow_indices_copy =
    foreign "atg_crow_indices_copy" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_crow_indices_copy_out =
    foreign "atg_crow_indices_copy_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_ctc_loss =
    foreign
      "atg_ctc_loss"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_ctc_loss_tensor =
    foreign
      "atg_ctc_loss_tensor"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_cudnn_affine_grid_generator =
    foreign
      "atg_cudnn_affine_grid_generator"
      (gc_tensor @-> int64_t @-> int64_t @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_cudnn_affine_grid_generator_backward =
    foreign
      "atg_cudnn_affine_grid_generator_backward"
      (gc_tensor @-> int64_t @-> int64_t @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_cudnn_affine_grid_generator_backward_out =
    foreign
      "atg_cudnn_affine_grid_generator_backward_out"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_cudnn_affine_grid_generator_out =
    foreign
      "atg_cudnn_affine_grid_generator_out"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_cudnn_batch_norm =
    foreign
      "atg_cudnn_batch_norm"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> double
       @-> double
       @-> returning void)
  ;;

  let stubs_cudnn_batch_norm_backward =
    foreign
      "atg_cudnn_batch_norm_backward"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs_cudnn_batch_norm_backward_out =
    foreign
      "atg_cudnn_batch_norm_backward_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs_cudnn_batch_norm_out =
    foreign
      "atg_cudnn_batch_norm_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> double
       @-> double
       @-> returning void)
  ;;

  let stubs_cudnn_convolution =
    foreign
      "atg_cudnn_convolution"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_cudnn_convolution_add_relu =
    foreign
      "atg_cudnn_convolution_add_relu"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_cudnn_convolution_add_relu_out =
    foreign
      "atg_cudnn_convolution_add_relu_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_cudnn_convolution_out =
    foreign
      "atg_cudnn_convolution_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_cudnn_convolution_relu =
    foreign
      "atg_cudnn_convolution_relu"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_cudnn_convolution_relu_out =
    foreign
      "atg_cudnn_convolution_relu_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_cudnn_convolution_transpose =
    foreign
      "atg_cudnn_convolution_transpose"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_cudnn_convolution_transpose_out =
    foreign
      "atg_cudnn_convolution_transpose_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_cudnn_grid_sampler =
    foreign "atg_cudnn_grid_sampler" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_cudnn_grid_sampler_backward =
    foreign
      "atg_cudnn_grid_sampler_backward"
      (ptr raw_tensor @-> gc_tensor @-> gc_tensor @-> gc_tensor @-> returning void)
  ;;

  let stubs_cudnn_grid_sampler_backward_out =
    foreign
      "atg_cudnn_grid_sampler_backward_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs_cudnn_grid_sampler_out =
    foreign
      "atg_cudnn_grid_sampler_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_cudnn_is_acceptable =
    foreign "atg_cudnn_is_acceptable" (gc_tensor @-> returning bool)
  ;;

  let stubs_cummax =
    foreign "atg_cummax" (ptr raw_tensor @-> gc_tensor @-> int64_t @-> returning void)
  ;;

  let stubs_cummax_out =
    foreign
      "atg_cummax_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> returning void)
  ;;

  let stubs_cummaxmin_backward =
    foreign
      "atg_cummaxmin_backward"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_cummin =
    foreign "atg_cummin" (ptr raw_tensor @-> gc_tensor @-> int64_t @-> returning void)
  ;;

  let stubs_cummin_out =
    foreign
      "atg_cummin_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> returning void)
  ;;

  let stubs_cumprod =
    foreign "atg_cumprod" (gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_cumprod_ =
    foreign "atg_cumprod_" (gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_cumprod_backward =
    foreign
      "atg_cumprod_backward"
      (gc_tensor @-> gc_tensor @-> int64_t @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_cumprod_out =
    foreign
      "atg_cumprod_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_cumsum =
    foreign "atg_cumsum" (gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_cumsum_ =
    foreign "atg_cumsum_" (gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_cumsum_out =
    foreign
      "atg_cumsum_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;
